# sweep

./: .gitignore  LICENSE  README.md  _config.yml  index.html  metadata.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  styles.css  sweep.key  sweep.key.pub
.github/workflows/: release.yml
src/: App.tsx  index.css  types.d.ts
src-tauri/: Cargo.toml  sweep.key  sweep.key.pub  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: cleanup_engine.rs  lib.rs  main.rs
src/components/: Header.tsx  Sidebar.tsx
src/lib/: tauriSimulation.ts
src/views/: AboutView.tsx  ExecutionView.tsx  ReviewView.tsx  ScanView.tsx  SettingsView.tsx
